--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 /app/bootstrap*
 /app/cache/*
 /app/logs/*
+/app/propel
 /vendor/
-*/om/*
-*/map/*
+src/Mazenovi/TodoMVCBundle/Model/map/
+src/Mazenovi/TodoMVCBundle/Model/om/
 composer.phar
