--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "jms/di-extra-bundle": "1.0.*",
         "propel/propel-bundle": "1.1.x-dev",
         "manymules/backbonejs-bundle": "dev-master",
-        "friendsofsymfony/rest-bundle": "dev-master"
+        "friendsofsymfony/rest-bundle": "dev-master",
+        "jms/metadata": "dev-master as 1.1.2-dev"
     },
     "scripts": {
         "post-install-cmd": [
