--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,11 @@
     "require-dev": {
         "behat/behat": "2.4.*@stable",
         "guzzle/guzzle": "dev-master",
-        "behat/symfony2-extension": "*"
+        "behat/symfony2-extension": "*",
+        "behat/mink":  "1.4.*@stable",
+        "behat/mink-extension": "*",      
+        "behat/mink-browserkit-driver":  "*",                
+        "behat/mink-sahi-driver":  "*"
 
     },
     "scripts": {
