Update Propel config

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -47,6 +47,9 @@ propel:
         options:              {}
         attributes:           {}
 
+    build_properties:
+        propel.mysql.tableType: InnoDB
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: %mailer_transport%
