FOSUser and twitterbootstrap integration

--- a/app/config/propel.ini
+++ b/app/config/propel.ini
@@ -22,3 +22,5 @@ propel.builder.pluralizer.class = builder.util.StandardEnglishPluralizer
 
 # MySQL config
 propel.mysql.tableType = InnoDB
+
+propel.behavior.typehintable.class = vendor.TypehintableBehavior.src.TypehintableBehavior
