--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,22 @@
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
+mazenovi_user_bundle:
+    resource: "@MazenoviUserBundle/Resources/config/routing.yml"
+    prefix:   /
+
 mazenovi_todomvc_api:
   resource:  "@MazenoviTodoMVCBundle/Controller/ApiController.php"
   type: annotation
+
+facebook_login:
+    pattern: /login/check-facebook
+
+google_login:
+    pattern: /login/check-google
+
+custom_login:
+    pattern: /login/check-custom
+
+github_login:
+    pattern: /login/check-github
