--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,6 +33,10 @@ assetic:
         sass:
             bin:        /usr/local/bin/sass
             compass:    /usr/local/bin/compass
+        less:
+            node: /usr/local/bin/node
+            node_paths: [/usr/local/lib/node_modules]
+            apply_to: "\.less$"
         yui_css:
             jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
         yui_js:
