--- a/src/Mazenovi/TodoMVCBundle/Resources/config/serializer/Model.Todo.yml
+++ b/src/Mazenovi/TodoMVCBundle/Resources/config/serializer/Model.Todo.yml
@@ -1,6 +1,6 @@
-# marche pas AU SECOURS @couac !!
 # http://jmsyst.com/bundles/JMSSerializerBundle/master/reference/yml_reference
+# @todo get this file working
 Mazenovi\TodoMVCBundle\Model\Todo:
     virual_properties:
         getDisplayName:
-            # marche pas AU SECOURS @couac!!serialized_name: displayName
+            serialized_name: displayName
