update propel config

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -47,6 +47,7 @@ propel:
         attributes:           {}
     build_properties:
         propel.mysql.tableType: InnoDB
+        propel.behavior.typehintable.class: vendor.TypehintableBehavior.src.TypehintableBehavior
 
 # Swiftmailer Configuration
 swiftmailer:
