--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,8 +19,8 @@ security:
         main:
             pattern:    ^/
             form_login:
-                provider: fos_userbundle
-                login_path: /connect/
+                provider:   fos_userbundle
+                login_path: /login
                 check_path: /login/login_check
                 # redirect to /todos after login
                 always_use_default_target_path: true
@@ -28,13 +28,14 @@ security:
                 #csrf_provider: form.csrf_provider
             logout:
                 # redirect to /todos after logout
-                target: /todos
+                target:   /todos
             anonymous:    true
             oauth:
                 resource_owners:
-                    facebook:           "/login/check-facebook"
-                login_path:        /connect
-                failure_path:      /connect
+                    facebook:        /login/check-facebook
+                login_path:          /login
+                failure_path:        /login
+                default_target_path: /todos
 
                 oauth_user_provider:
                     service: hwi_oauth.user.provider.fosub_bridge
