push permission in todo json for js

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,6 +70,8 @@ jms_serializer:
                 path: @MazenoviTodoMVCBundle/Resources/config/serializer
 
 fos_rest:
+    service:
+        view_handler: mazenovi_todomvc.view_handler
     view:
         default_engine: twig
         force_redirects:
