update composer.json and composer.lock

--- a/composer.json
+++ b/composer.json
@@ -53,14 +53,14 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.1.*",
+        "symfony/symfony": "2.1.x-dev",
         "twig/extensions": "dev-master",
         "symfony/assetic-bundle": "dev-master",
         "symfony/swiftmailer-bundle": "dev-master",
         "symfony/monolog-bundle": "dev-master",
-        "sensio/distribution-bundle": "dev-master",
-        "sensio/framework-extra-bundle": "dev-master",
-        "sensio/generator-bundle": "dev-master",
+        "sensio/distribution-bundle": "*",
+        "sensio/framework-extra-bundle": "*",
+        "sensio/generator-bundle": "*",
         "jms/security-extra-bundle": "1.1.*",
         "jms/di-extra-bundle": "1.0.*",
         "propel/propel1": "1.6.x-dev",
@@ -75,6 +75,7 @@
         "manymules/jquery-bundle": ">1.7",
         "manymules/json2js-bundle": "*",
         "manymules/requirejs-bundle": "*",
+        "manymules/underscorejs-bundle": "*",
         "twitter/bootstrap": "master",
         "mopa/bootstrap-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "dev-master"
