--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,8 @@
         "twitter/bootstrap": "master",
         "mopa/bootstrap-bundle": "dev-master",
         "manymules/fontawesome-bundle": "*",
-        "knplabs/knp-menu-bundle": "dev-master"
+        "knplabs/knp-menu-bundle": "dev-master",
+        "nelmio/api-doc-bundle": "dev-master"
     },
     "require-dev": {
         "behat/behat": "2.4.*@stable",
