--- a/composer.json
+++ b/composer.json
@@ -96,7 +96,6 @@
     },
     "extra": {
         "symfony-app-dir": "app",
-        "symfony-web-dir": "web",
-        "symfony-assets-install": "symlink"
+        "symfony-web-dir": "web"
     }
 }
