--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,7 +19,7 @@ security:
         wsse_secured:
             request_matcher: wsse.security.firewall.request_matcher
             wsse:      
-                nonces_path: %kernel.cache_dir%/security/nonce
+                nonces_cache_path: security/nonce
                 lifetime: 6000
                 protected_urls: 
                     - { pattern: ^/todos, methods: [ PUT, POST, DELETE ] }
