--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
                 "source": {
                     "url": "https://github.com/twitter/bootstrap.git",
                     "type": "git",
-                "reference": "master"
+                    "reference": "master"
                 },
                 "dist": {
                     "url": "https://github.com/twitter/bootstrap/zipball/master",
@@ -42,10 +42,11 @@
         "symfony/swiftmailer-bundle": "dev-master",
         "symfony/monolog-bundle": "dev-master",
         "sensio/distribution-bundle": "*",
-        "sensio/framework-extra-bundle": "*",
+        "sensio/framework-extra-bundle": "2.1.*",
         "sensio/generator-bundle": "*",
         "jms/security-extra-bundle": "1.1.*",
-        "jms/di-extra-bundle": "1.0.*",
+        "jms/serializer-bundle": "1.0-dev",
+        "jms/metadata": "dev-master as 1.1.2-dev",
         "propel/propel1": "1.6.x-dev",
         "propel/propel-bundle": "1.1.x-dev",
         "TypehintableBehavior": "master",
@@ -53,7 +54,6 @@
         "friendsofsymfony/rest-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "dev-master",
         "hwi/oauth-bundle": "*",
-        "jms/metadata": "dev-master as 1.1.2-dev",
         "manymules/backbonejs-bundle": "*",
         "manymules/jquery-bundle": ">1.7",
         "manymules/json2js-bundle": "*",
