--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "symfony/symfony": "2.1.x-dev",
         "twig/extensions": "dev-master",
         "symfony/swiftmailer-bundle": "dev-master",
-        "symfony/monolog-bundle": "dev-master",
+        "symfony/monolog-bundle": "2.1.x-dev",
         "sensio/distribution-bundle": "*",
         "sensio/framework-extra-bundle": "2.1.*",
         "sensio/generator-bundle": "*",
@@ -54,14 +54,14 @@
         "friendsofsymfony/rest-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "dev-master",
         "hwi/oauth-bundle": "*",
-        "manymules/backbonejs-bundle": "*",
-        "manymules/jquery-bundle": ">1.7",
-        "manymules/json2js-bundle": "*",
-        "manymules/requirejs-bundle": "*",
-        "manymules/underscorejs-bundle": "*",
+        "bmatzner/backbone-bundle": "*",
+        "bmatzner/jquery-bundle": "*",
+        "bmatzner/json2-bundle": "*",
+        "bmatzner/require-bundle": "*",
+        "bmatzner/underscore-bundle":"*", 
         "twitter/bootstrap": "master",
         "mopa/bootstrap-bundle": "dev-master",
-        "manymules/fontawesome-bundle": "*",
+        "bmatzner/fontawesome-bundle": "*",
         "knplabs/knp-menu-bundle": "dev-master",
         "nelmio/api-doc-bundle": "dev-master"
     },
